public fix #28: Remove flex-wrap for pills

--- a/public/styles/_theme_overrides.scss
+++ b/public/styles/_theme_overrides.scss
@@ -22,11 +22,6 @@ body.hacker {
 	}
 }
 
-body.brutal-dark .suggestion-pills,
-body.brutal-light .suggestion-pills {
-	display: block;
-}
-
 body.modern-light,
 body.brutal-light {
 	& .h-dropdown-menu {
