--- a/public/styles/components/Search.scss
+++ b/public/styles/components/Search.scss
@@ -183,10 +183,7 @@ $gutter: 0.6rem;
 .suggestion-pills {
 	width: 100%;
 	max-width: 40rem;
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
-	flex-wrap: wrap;
+	display: block;
 
 	& .suggestion-pill {
 		appearance: none;
